--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-xs-12">
           <form id="questionThree">
             <div class="question">
-              <p>3.Do you think the military should have more money?</p>
+              <p>3.Do you think the military should have less money?</p>
               <input type="radio" name="threeOne" value="-1"> Yes <br>
               <input type="radio" name="threeTwo" value="1"> No <br>
             </div>
@@ -88,7 +88,7 @@
           <form id="questionSix">
             <div class="question">
               <p>
-                6.Do you think that the 45th president of the United States, Donald Trump, is a moral, kind, ethical
+                6.Do you think that the 45th president of the United States, Donald Trump, is not a moral, kind, ethical
                 person that you want in charge of the nation?
               </p>
               <input type="radio" name="sixOne" value="-1"> Yes <br>
